[package]
edition = "2021"
name = "example_web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# members = []

[dependencies]
#base async
features = "0.10"
tokio = {version = "1.37", features = ["full"]}

actix-web = "4"
# axum="0.7"
# tower = "0.4"
config = "0.14"
serde = "1.0"
serde_json = "1.0"

libsm = "0.6"

# log4rs = "1.3"
# log = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3.0"

opentelemetry = "0.22"
opentelemetry-stdout = {version = "0.3", features = ["trace"]}
opentelemetry_sdk = "0.22"

# [[bin]]
# name="nacos"
